--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-
-<div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
+   <div class="container">
+    <a class="navbar-brand" href="#"><img src="../assets/logo.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,82 +12,99 @@
         <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </div>
     </div>
+   </div>
   </nav>
+  <div class="row header">
+    <div class="container">
+      <div class="col kiril">
+        <h1>Yakovlev Kirill</h1>
+        <h6>User Experience / User Interface Expert</h6>
+        <button>#</button>
+        <button>#</button>
+      </div>
+      <div class="col">
+        <img class="size-images" src="../assets/me.png" width="650" alt="photo">
+      </div>
+    </div>
+  </div>
   <div class="row">
-    <div class="col">
-      <h1>Yakovlev Kirill</h1>
-      <h6>User Experience / User Interface Expert</h6>
+    <div class="container">
+      <div class="col">
+        <h1>Yakovlev Kirill</h1>
+        <h6>User Experience / User Interface Expert</h6>
+        <button>#</button>
+      </div>
+      <div class="col">
+        <img class="size-images" src="https://cnet3.cbsistatic.com/img/-qQkzFVyOPEoBRS7K5kKS0GFDvk=/940x0/2020/04/16/7d6d8ed2-e10c-4f91-b2dd-74fae951c6d8/bazaart-edit-app.jpg" alt="photo">
+      </div>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="container">
+      <h1 class="text-center">SERVICES</h1>
+      <div class="w-100"></div>
+      <div class="col justify-content-center">1</div>
+      <div class="col justify-content-center">2</div>
+      <div class="col justify-content-center">3</div>
+      <div class="w-100"></div>
+      <div class="col justify-content-center">4</div>
+      <div class="col justify-content-center">5</div>
+      <div class="col justify-content-center">6</div>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="container">
+      <h1 class="text-center">MY SKILLS</h1>
+      <div class="w-100"></div>
+      <div class="col justify-content-center">1</div>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="container">
+      <h1 class="text-center">PORTFOLIO</h1>
+      <div class="w-100"></div>
+      <div class="col justify-content-center">1</div>
+      <div class="col justify-content-center">2</div>
+      <div class="col justify-content-center">3</div>
+      <div class="w-100"></div>
+      <div class="col justify-content-center">4</div>
+      <div class="col justify-content-center">5</div>
+      <div class="col justify-content-center">6</div>
+      <div class="w-100"></div>
       <button>#</button>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="container">
+      <h1 class="text-center">TESTIMONIALS</h1>
+      <div class="w-100"></div>
+      <div class="col justify-content-center">slider</div>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="container">
+      <div class="col justify-content-center">1</div>
+      <div class="col justify-content-center">2</div>
+      <div class="col justify-content-center">3</div>
+      <div class="col justify-content-center">4</div>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="container">
+      <h1 class="text-center">SAY HELLO!</h1>
+      <div class="w-100"></div>
+      <div class="col justify-content-center">INPUT 1</div>
+      <div class="col justify-content-center"></div>
+      <div class="w-100"></div>
+      <div class="col justify-content-center">TEXTAREA</div>
+      <div class="w-100"></div>
       <button>#</button>
-    </div>
-    <div class="col">
-      <img class="size-images" src="https://cnet3.cbsistatic.com/img/-qQkzFVyOPEoBRS7K5kKS0GFDvk=/940x0/2020/04/16/7d6d8ed2-e10c-4f91-b2dd-74fae951c6d8/bazaart-edit-app.jpg" alt="photo">
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <h1>Yakovlev Kirill</h1>
-      <h6>User Experience / User Interface Expert</h6>
-      <button>#</button>
-    </div>
-    <div class="col">
-      <img class="size-images" src="https://cnet3.cbsistatic.com/img/-qQkzFVyOPEoBRS7K5kKS0GFDvk=/940x0/2020/04/16/7d6d8ed2-e10c-4f91-b2dd-74fae951c6d8/bazaart-edit-app.jpg" alt="photo">
-    </div>
-  </div>
-  <div class="row justify-content-center">
-    <h1 class="text-center">SERVICES</h1>
-    <div class="w-100"></div>
-    <div class="col justify-content-center">1</div>
-    <div class="col justify-content-center">2</div>
-    <div class="col justify-content-center">3</div>
-    <div class="w-100"></div>
-    <div class="col justify-content-center">4</div>
-    <div class="col justify-content-center">5</div>
-    <div class="col justify-content-center">6</div>
-  </div>
-  <div class="row justify-content-center">
-    <h1 class="text-center">MY SKILLS</h1>
-    <div class="w-100"></div>
-    <div class="col justify-content-center">1</div>
-  </div>
-  <div class="row justify-content-center">
-    <h1 class="text-center">PORTFOLIO</h1>
-    <div class="w-100"></div>
-    <div class="col justify-content-center">1</div>
-    <div class="col justify-content-center">2</div>
-    <div class="col justify-content-center">3</div>
-    <div class="w-100"></div>
-    <div class="col justify-content-center">4</div>
-    <div class="col justify-content-center">5</div>
-    <div class="col justify-content-center">6</div>
-    <div class="w-100"></div>
-    <button>#</button>
-  </div>
-  <div class="row justify-content-center">
-    <h1 class="text-center">TESTIMONIALS</h1>
-    <div class="w-100"></div>
-    <div class="col justify-content-center">slider</div>
-  </div>
-  <div class="row justify-content-center">
-    <div class="col justify-content-center">1</div>
-    <div class="col justify-content-center">2</div>
-    <div class="col justify-content-center">3</div>
-    <div class="col justify-content-center">4</div>
-  </div>
-  <div class="row justify-content-center">
-    <h1 class="text-center">SAY HELLO!</h1>
-    <div class="w-100"></div>
-    <div class="col justify-content-center">INPUT 1</div>
-    <div class="col justify-content-center"></div>
-    <div class="w-100"></div>
-    <div class="col justify-content-center">TEXTAREA</div>
-    <div class="w-100"></div>
-    <button>#</button>
-    <div class="w-100"></div>
+    </div>>
   </div>
   <div class="row justify-content-start">
-    <div class="col-5">icon</div>
-    <div class="col-7">footer</div>
+    <div class="container">
+      <div class="col-5">icon</div>
+      <div class="col-7">footer</div>
+    </div>
   </div>
-</div>
 
