--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,17 @@
+body {
+  font-family: 'Asap', sans-serif;
+}
+
+.header {
+  background-color: #dedede;
+  background-image: url("../assets/bg element .png");
+}
+
+.kiril {
+  text-align: center;
+  margin: 0 auto;
+}
+
 .size-images {
   width: 100%;
 }
