--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,50 @@
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-   <div class="container">
-    <a class="navbar-brand" href="#"><img src="../assets/logo.png"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Features</a>
-        <a class="nav-item nav-link" href="#">Pricing</a>
-        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+ <div class="row header">
+   <nav class="navbar navbar-expand-lg navbar-light bg-light header_nav">
+     <div class="container">
+       <a class="navbar-brand" href="#"><img src="../assets/logo.png"></a>
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+         <div class="navbar-nav">
+           <a class="nav-item nav-link nav_link" href="#">HOME</a>
+           <a class="nav-item nav-link nav_link" href="#">ABOUT</a>
+           <a class="nav-item nav-link nav_link" href="#">SERVICE</a>
+           <a class="nav-item nav-link nav_link" href="#">PORTFOLIO</a>
+           <a class="nav-item nav-link nav_link" href="#">CONTACT</a>
+         </div>
+       </div>
+     </div>
+   </nav>
+    <div class="container header_elements">
+      <div class="col-7 header_title">
+        <h1 class="title">Yakovlev Kirill</h1>
+        <h6 class="subtitle">User Experience / User Interface Expert</h6>
+        <a href="#">
+          <button class="btn">KNOW MORE</button>
+        </a>
+        <a href="#">
+          <button class="btn">HIRE ME</button>
+        </a>
       </div>
-    </div>
-   </div>
-  </nav>
-  <div class="row header">
-    <div class="container">
-      <div class="col kiril">
-        <h1>Yakovlev Kirill</h1>
-        <h6>User Experience / User Interface Expert</h6>
-        <button>#</button>
-        <button>#</button>
-      </div>
-      <div class="col">
-        <img class="size-images" src="../assets/me.png" width="650" alt="photo">
+      <div class="col-5 col_images">
+        <img src="../assets/me.png" alt="photo">
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="container">
-      <div class="col">
-        <h1>Yakovlev Kirill</h1>
-        <h6>User Experience / User Interface Expert</h6>
-        <button>#</button>
+    <div class="container menu_elements">
+      <div class="col-7">
+        <h1 class="menu_title"><span class="line">KN</span>OW MORE <br> ABOUT ME</h1>
+        <h6 class="menu_subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+          Aenean commodo ligula eget dolor. Aenean massa.
+          Cum sociis natoque penatibus et magnis dis parturient montes,
+          nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
+          sem. Nulla consequat massa quis enim.</h6>
+        <button class="btn">DOWNLOAD MY CV</button>
       </div>
-      <div class="col">
-        <img class="size-images" src="https://cnet3.cbsistatic.com/img/-qQkzFVyOPEoBRS7K5kKS0GFDvk=/940x0/2020/04/16/7d6d8ed2-e10c-4f91-b2dd-74fae951c6d8/bazaart-edit-app.jpg" alt="photo">
+      <div class="col-5">
+        <img class="menu_img" src="../assets/6.jpg" alt="photo">
       </div>
     </div>
   </div>
