--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,115 @@
-body {
-  font-family: 'Asap', sans-serif;
+*,
+:before,
+:after {
+  box-sizing: border-box;
+}
+
+.header_nav {
+  width: 100%;
+}
+
+.nav_link {
+  text-transform: uppercase;
+  font-size: 16px;
+  cursor: pointer;
+  transition: .2s;
+  padding: 0 !important;
+  margin-left: 40px;
+  margin-bottom: 5px;
+  border-bottom: 1px solid transparent;
+}
+
+.nav_link:first-child {
+  margin-left: 0;
+}
+
+.nav_link:hover {
+  color: #727272;
+  border-color: #878787;
+
 }
 
 .header {
-  background-color: #dedede;
-  background-image: url("../assets/bg element .png");
+  background-image: url("../assets/bgelement.png");
+  background-color: #ccc;
+  .bg-light {
+    background-color: transparent !important;
+  }
 }
 
-.kiril {
-  text-align: center;
-  margin: 0 auto;
+.row {
+  margin: 0;
 }
 
-.size-images {
-  width: 100%;
+.header_elements {
+  display: flex;
+  align-items: center;
+}
+
+.header_title {
+  text-align: left;
+}
+
+.col_images {
+
+  display: flex;
+  justify-content: flex-end;
+  img {
+    max-width: 540px;
+    height: auto;
+  }
+}
+
+.title {
+  font-size: 90px;
+  color: #4d4d4d;
+}
+
+.subtitle {
+  font-size: 22px;
+  color: #909090;
+  margin-bottom: 30px;
+}
+
+.btn {
+  border: 1px solid #000;
+  font-weight: 700;
+  cursor: pointer;
+  padding: 10px 20px;
+  margin-right: 20px;
+  color: #4d4d4d;
+  background-color: transparent;
+  transition: .2s;
+  &:hover {
+    background-color: #fff;
+    border-color: transparent;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5)
+  }
+}
+
+.line {
+  border-top:  4px solid #7a7a7a;
+}
+
+.menu_elements {
+  display: flex;
+  align-items: center;
+  margin-bottom: 110px;
+  margin-top: 110px;
+}
+
+.menu_title {
+  font-size: 46px;
+  color: #7b7b7b;
+}
+
+.menu_subtitle {
+  color: #4d4d4d;
+  font-weight: 500;
+  margin-bottom: 35px;
+}
+
+.menu_img {;
+  max-height: 440px;
+  max-width: 570px;
 }
