--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
- <div class="row header">
+<div class="row header" xmlns="http://www.w3.org/1999/html">
    <nav class="navbar navbar-expand-lg navbar-light bg-light header_nav">
      <div class="container">
        <a class="navbar-brand" href="#"><img src="../assets/logo.png"></a>
@@ -44,43 +44,79 @@
         <button class="btn">DOWNLOAD MY CV</button>
       </div>
       <div class="col-5">
-        <img class="menu_img" src="../assets/6.jpg" alt="photo">
+        <img class="menu_img" src="../assets/me1.jpg" alt="photo">
       </div>
     </div>
   </div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center services">
     <div class="container">
-      <h1 class="text-center">SERVICES</h1>
+      <h1 class="text-center menu_title">SER<span class="line">VI</span>CES</h1>
       <div class="w-100"></div>
-      <div class="col justify-content-center">1</div>
-      <div class="col justify-content-center">2</div>
-      <div class="col justify-content-center">3</div>
+      <div class="col services_icon">
+        <div>
+          <img class="img_icon" src="../assets/s1.png" alt="icon">
+          <p class="services_subtitle">User Research</p>
+        </div>
+        <div>
+         <img class="img_icon" src="../assets/s2.png" alt="icon">
+          <p class="services_subtitle">IA And Wireframes</p>
+        </div>
+        <div>
+          <img class="img_icon" src="../assets/s3.png" alt="icon">
+          <p class="services_subtitle">User Testing</p>
+        </div>
+      </div>
       <div class="w-100"></div>
-      <div class="col justify-content-center">4</div>
-      <div class="col justify-content-center">5</div>
-      <div class="col justify-content-center">6</div>
+      <div class="col services_icon">
+        <div>
+          <img class="img_icon" src="../assets/s4.png" alt="icon">
+          <p class="services_subtitle">Looks and Feel Design (UI)</p>
+        </div>
+        <div>
+         <img class="img_icon" src="../assets/s5.png" alt="icon">
+          <p class="services_subtitle">Delivery</p>
+        </div>
+        <div>
+         <img class="img_icon" src="../assets/s6.png" alt="icon">
+          <p class="services_subtitle">Integration Support</p>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center skills">
     <div class="container">
-      <h1 class="text-center">MY SKILLS</h1>
+      <h1 class="text-center menu_title">MY <span class="line">SK</span>ILLS</h1>
       <div class="w-100"></div>
-      <div class="col justify-content-center">1</div>
+      <div class="col justify-content-center">
+        <img class="skills_img" src="../assets/progres.png" alt="progres">
+      </div>
     </div>
   </div>
-  <div class="row justify-content-center">
-    <div class="container">
-      <h1 class="text-center">PORTFOLIO</h1>
+  <div class="row justify-content-center portfolio">
+    <div class="container portfolio_pos">
+      <h1 class="text-center menu_title title_height">POR<span class="line">TF</span>OLIO</h1>
       <div class="w-100"></div>
-      <div class="col justify-content-center">1</div>
-      <div class="col justify-content-center">2</div>
-      <div class="col justify-content-center">3</div>
+      <div class="col justify-content-center pos">
+        <img src="../assets/1.jpg" alt="portfolio">
+      </div>
+      <div class="col justify-content-center pos">
+        <img src="../assets/2.jpg" alt="portfolio">
+      </div>
+      <div class="col justify-content-center pos">
+        <img src="../assets/3.jpg" alt="portfolio">
+      </div>
       <div class="w-100"></div>
-      <div class="col justify-content-center">4</div>
-      <div class="col justify-content-center">5</div>
-      <div class="col justify-content-center">6</div>
+      <div class="col justify-content-center pos">
+        <img src="../assets/4.jpg" alt="portfolio">
+      </div>
+      <div class="col justify-content-center pos">
+        <img src="../assets/5.jpg" alt="portfolio">
+      </div>
+      <div class="col justify-content-center pos">
+        <img src="../assets/6.jpg" alt="portfolio">
+      </div>
       <div class="w-100"></div>
-      <button>#</button>
+      <button class="btn btn_height">LOAD MORE</button>
     </div>
   </div>
   <div class="row justify-content-center">
