--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,3 @@
-*,
-:before,
-:after {
-  box-sizing: border-box;
-}
-
 .header_nav {
   width: 100%;
 }
@@ -101,6 +95,7 @@
 .menu_title {
   font-size: 46px;
   color: #7b7b7b;
+  font-weight: 700;
 }
 
 .menu_subtitle {
@@ -112,4 +107,56 @@
 .menu_img {;
   max-height: 440px;
   max-width: 570px;
+}
+
+.services {
+  padding: 120px 0 140px 0;
+  background: #f6f6f6;
+}
+
+.img_icon {
+  width: 80px;
+  height: 80px;
+  margin-top: 70px;
+}
+
+.services_icon {
+  display: flex;
+  justify-content: space-around;
+}
+
+.services_subtitle {
+  color: #4d4d4d;
+  font-weight: 500;
+}
+
+.skills {
+  padding: 120px 0 140px 0;
+  text-align: center;
+}
+
+.skills_img {
+  margin-top: 60px;
+}
+
+.portfolio {
+  background: #f6f6f6;
+  padding: 120px 0;
+}
+
+.portfolio_pos {
+  display: contents;
+  text-align: center;
+}
+
+.title_height {
+  margin-bottom: 50px;
+}
+
+.btn_height {
+  margin-top: 30px;
+}
+
+.pos {
+  margin-bottom: 30px;
 }
